--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Html</title>
+    <title>contact html</title>
 </head>
 <body>
-    this is About html 
+    this is contact html 
     <h2> this is new feature </h2>
 </body>
 </html>
